--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "cordova-plugin-wkwebview-engine": "git+https://github.com/ionic-team/cordova-plugin-wkwebview-engine.git",
         "ionic-angular": "3.6.0",
         "ionic-plugin-keyboard": "^2.2.1",
+        "ionic2-rating": "^1.2.2",
         "ionicons": "3.0.0",
         "phonegap-plugin-barcodescanner": "^6.0.8",
         "rxjs": "5.4.0",
